@@ -93,14 +93,14 @@ namespace Smuxi.Frontend.Gnome
         
         public override void EnableChat(ChatModel chat)
         {
-       	    ChatView chatView = _Notebook.GetChat(chat);
-       	    chatView.Enable();
+            ChatView chatView = _Notebook.GetChat(chat);
+            chatView.Enable();
         }
         
         public override void DisableChat(ChatModel chat)
         {
-       	    ChatView chatView = _Notebook.GetChat(chat);
-       	    chatView.Disable();
+            ChatView chatView = _Notebook.GetChat(chat);
+            chatView.Disable();
         }
         
         public ChatView GetChat(ChatModel chatModel)
