@@ -116,26 +116,26 @@ namespace Smuxi.Frontend.Gnome
         
         public void EnableChat(ChatModel chat)
         {
-        	TraceRemotingCall(chat);
+            TraceRemotingCall(chat);
 
             MethodBase mb = Trace.GetMethodBase();
             Gtk.Application.Invoke(delegate {
-            	TraceRemotingCall(mb, chat);
+                TraceRemotingCall(mb, chat);
                 
                 _ChatViewManager.EnableChat(chat);
-        	});
+            });
         }
         
         public void DisableChat(ChatModel chat)
         {
-        	TraceRemotingCall(chat);
-        	
+            TraceRemotingCall(chat);
+            
             MethodBase mb = Trace.GetMethodBase();
             Gtk.Application.Invoke(delegate {
-            	TraceRemotingCall(mb, chat);
-            	
+                TraceRemotingCall(mb, chat);
+                
                 _ChatViewManager.DisableChat(chat);
-        	});
+            });
         }
         
         public void SyncChat(ChatModel chatModel)
