@@ -1,3 +1,7 @@
+2008-03-02  Mirco Bauer <meebey@meebey.net> 
+
+	* Protocols/ProtocolManagerBase.cs: Fixed parsing of URLs.
+
 2008-01-31  Mirco Bauer <meebey@meebey.net> 
 
 	* Session.cs, FrontendManager.cs: Deregister the FrontendManager by using
